refactor(tests): minor refactors